--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -53,7 +53,7 @@ sniffio==1.3.1
 starlette==0.27.0
 storage3==2.24.0
 StrEnum==0.4.15
-stripe==7.8.0
+stripe>=8.0.0,<9.0.0
 supabase==2.24.0
 supabase-auth==2.24.0
 supabase-functions==2.24.0
